# modern-cpp-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/src/: tmp_benchmark.cpp
cmake/: Dependencies.cmake  Doxygen.cmake  Package.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
include/project/: tmp.hpp
res/: info.rc.in
src/: tmp.cpp
test/: CMakeLists.txt
test/src/: tmp_test.cpp
